WIP: LoRaWAN using OTAA (with TTS and Chirpstack) is working!
Arduino end-device and Pycom nano gateway.

--- a/LoRaWAN/LoRaArduinoClient/platformio.ini
+++ b/LoRaWAN/LoRaArduinoClient/platformio.ini
@@ -18,3 +18,5 @@ lib_deps =
 	adafruit/Adafruit SSD1306@^2.4.6
 	adafruit/Adafruit GFX Library@^1.10.12
 	adafruit/Adafruit BusIO@^1.9.2
+	adafruit/Adafruit AM2315@^2.2.0
+	adafruit/Adafruit Unified Sensor@^1.1.4
