WIP: Improves in Gateway and Node.
Update README.md
Now Arduino End Device uses the display's screen.

--- a/LoRaWAN/LoRaArduinoClient/platformio.ini
+++ b/LoRaWAN/LoRaArduinoClient/platformio.ini
@@ -20,3 +20,4 @@ lib_deps =
 	adafruit/Adafruit BusIO@^1.9.2
 	adafruit/Adafruit AM2315@^2.2.0
 	adafruit/Adafruit Unified Sensor@^1.1.4
+	paulstoffregen/Time@^1.6.1
