--- a/LoRaMAC/LoRaMACArduinoClient/platformio.ini
+++ b/LoRaMAC/LoRaMACArduinoClient/platformio.ini
@@ -13,4 +13,8 @@ platform = espressif32
 board = heltec_wifi_lora_32
 framework = arduino
 monitor_speed = 115200
-lib_deps = sandeepmistry/LoRa@^0.8.0
+upload_port = COM4
+lib_deps = 
+	sandeepmistry/LoRa@^0.8.0
+	adafruit/Adafruit SSD1306@^2.4.6
+	adafruit/Adafruit GFX Library@^1.10.12
