WIP: Added decoders and update readmes.

--- a/LoRaWAN/LoRaArduinoClient/platformio.ini
+++ b/LoRaWAN/LoRaArduinoClient/platformio.ini
@@ -21,3 +21,4 @@ lib_deps =
 	adafruit/Adafruit AM2315@^2.2.0
 	adafruit/Adafruit Unified Sensor@^1.1.4
 	paulstoffregen/Time@^1.6.1
+	thesolarnomad/LoRa Serialization@^3.0.1
